Get and Edit Schedule session added

--- a/app/html/get_schedule_session_modal.html
+++ b/app/html/get_schedule_session_modal.html
@@ -11,17 +11,125 @@
   
   <body>
 
-    <!-- Available Timezone Temnplate -->
-    <script id="schedule_session_list_component" type="text/x-handlebars-template">
+    <!-- Edit Scheduled Session -->
 
-        <table>
+    <!-- Available Timezone Temnplate -->
+    <script id="available_timezone_component" type="text/x-handlebars-template">
+        {{#each this}}
+            <div class="each-timezone-container" onclick="ScheduleUtil.scheduleObj.selectTimezone(&quot;{{timezone}}&quot;);">
+                <span>{{full_text_timezone}}</span>
+            </div>
+        {{/each}}
+    </script>
+
+    <!-- Get remaining time Temnplate -->
+    <script id="time_list_component" type="text/x-handlebars-template">
+        {{#each this}}
+            <div class="each-timezone-container" onclick="ScheduleUtil.scheduleObj.selectTime({{timestamp}});">
+                <span>{{full_text_time}}</span>
+            </div>
+        {{/each}}
+    </script>
+
+    <!-- Get remainder Temnplate -->
+    <script id="remainder_list_component" type="text/x-handlebars-template">
+        {{#each this}}
+            <div class="each-timezone-container" onclick="ScheduleUtil.scheduleObj.selectRemainder({{minutes}},&quot;{{full_text_remainder}}&quot;);">
+                <span>{{full_text_remainder}}</span>
+            </div>
+        {{/each}}
+    </script>
+
+    <!-- Schedule Button Section Template -->
+    <script id="schedule_main_template" type="text/x-handlebars-template">
+        <div class="schedule-container">
+            <span id="schedule_message" class="schedule-message"></span>
+            <div class="schedule-field">
+                <div>
+                    <span class="labelspan">Customer Email</span>
+                </div>
+                <br>
+                <input class="label-value" type="text" id="customer_email_id" value="{{ customer_email }}" onkeyup="ScheduleUtil.scheduleObj.selectCustomerEmail();" readonly />
+            </div>
+            <div class="schedule-field">
+                <div>
+                    <span class="labelspan">Title</span>
+                </div>
+                <br>
+                <input class="label-value" type="text" id="ticket_subject_id" value="{{ ticket_subject }}" onkeyup="ScheduleUtil.scheduleObj.selectTicketSubject();" />
+            </div>
+            <div class="schedule-field">
+                <div>
+                    <span class="labelspan">Description</span>
+                </div>
+                <br>
+                <textarea class="label-value" id="ticket_description_id" onkeyup="ScheduleUtil.scheduleObj.selectTicketDescription();">{{ ticket_description }}</textarea>
+            </div>
+            <div class="schedule-field" id="timezone_component">
+                <div>
+                    <span class="labelspan">Timezone</span>
+                </div>
+                <br>
+                <span class="label-value date-time-dropdown" onclick="ScheduleUtil.scheduleObj.switchAvailableTimezone();">{{timezone}}</span>
+                <div class="available-timezone-container" id="available_timezone_with_filter">
+                    <span><input type="text" id="timezone_filter_input" placeholder="Search" value="" onkeyup="ScheduleUtil.scheduleObj.filterAvailableTimezones();" /></span>
+                    <div id="available_timezone"></div>
+                </div>
+            </div>
+            <div class="schedule-field">
+                <div style="float:left;width:30%;">
+                    <div>
+                        <span class="labelspan">Data</span>
+                    </div>
+                    <br>
+                    <span class="label-value date-time-dropdown" id="schedule_date_id">{{display_date}}</span>
+                </div>
+                <div style="float:left;width:30%;">
+                    <div>
+                        <span class="labelspan">Time</span>
+                    </div>
+                    <br>
+                    <span class="label-value date-time-dropdown" id="schedule_time_id" onclick="ScheduleUtil.scheduleObj.showTime();">{{display_time}}</span>
+                    <div class="available-timezone-container" id="available_time_filter" style="width:95px;">
+                        <div id="available_time"></div>
+                    </div>
+                </div>
+                <div style="float:left;width:30%;">
+                    <div>
+                        <span class="labelspan">Remainder</span>
+                    </div>
+                    <br>
+                    <span class="label-value date-time-dropdown" id="schedule_remainder_id" onclick="ScheduleUtil.scheduleObj.showRemainders();">{{remainder}}</span>
+                    <div class="available-timezone-container" id="available_remainder_filter" style="width:120px;">
+                        <div id="available_remainders"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="schedule-field" style="margin-top:30px;">
+                <input type="button" class="primary-btn" style="float:right;" value="SCEDULE" onclick="ScheduleUtil.scheduleObj.updateScheduleSession()" />
+                <input type="button" class="primary-btn" style="float:right;" value="BACK" onclick="ScheduleUtil.scheduleObj.hideUpdateScheduleSession()" />
+            </div>
+        </div>
+    </script>
+    <!-- End of Edit Scheduled Session -->
+
+    <!-- Schedule session list Temnplate -->
+    <script id="schedule_session_list_component" type="text/x-handlebars-template">
+        <table class="get-schedule-session-table">
+            <tr class="schedule-session-list-container">
+                <th>Ticket No</th>
+                <th>Schedule Time</th>
+                <th>Modified By</th>
+                <th>Modified Time</th>
+                <th></th>
+            </tr>
             {{#each this}}
                 <tr class="schedule-session-list-container">
-                    <td>{{owner_name}}</td>
+                    <td>{{ticket_no}}</td>
                     <td>{{schedule_time}}</td>
-                    <td>{{created_time}}</td>
                     <td>{{updated_by}}</td>
                     <td>{{updated_time}}</td>
+                    <td onclick="ScheduleUtil.scheduleObj.showUpdateScheduleSession(&quot;{{schedule_id}}&quot;)">Edit</td>
                 </tr>
             {{/each}}
         </table>
