update schedule session changes

--- a/app/html/get_schedule_session_modal.html
+++ b/app/html/get_schedule_session_modal.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="schedule-field" style="margin-top:30px;">
-                <input type="button" class="primary-btn" style="float:right;" value="SCEDULE" onclick="ScheduleUtil.scheduleObj.updateScheduleSession()" />
+                <input type="button" class="primary-btn" style="float:right;" value="UPDATE" onclick="ScheduleUtil.scheduleObj.updateScheduleSession()" />
                 <input type="button" class="primary-btn" style="float:right; margin-right:20px;" value="BACK" onclick="ScheduleUtil.scheduleObj.hideUpdateScheduleSession()" />
             </div>
         </div>
