--- a/app/html/schedule_session_modal.html
+++ b/app/html/schedule_session_modal.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="schedule-field" style="margin-top:30px;">
-                <input type="button" class="primary-btn" style="float:right;" value="SCEDULE" onclick="ScheduleUtil.scheduleObj.createScheduleSession()" />
+                <input type="button" class="primary-btn" style="float:right;" value="SCHEDULE" onclick="ScheduleUtil.scheduleObj.createScheduleSession()" />
             </div>
         </div>
     </script>
