html issue fix, style changes

--- a/app/html/ticket_sidebar.html
+++ b/app/html/ticket_sidebar.html
@@ -43,7 +43,7 @@
         </span>
         <div class="btn-container">
             <input type="button" class="primary-btn" value="Authorize" onclick="AssistUtil.assistObj.openInstallationPage()" />
-        </div>div>
+        </div>
     </script>
 
     <!-- Assist Main Template -->
