--- a/app/html/schedule_session_modal.html
+++ b/app/html/schedule_session_modal.html
@@ -61,7 +61,7 @@
             </div>
             <div class="schedule-field">
                 <div>
-                    <span class="labelspan">Description</span>
+                    <span class="labelspan">Description (Optional)</span>
                 </div>
                 <br>
                 <textarea class="label-value" id="ticket_description_id" onkeyup="ScheduleUtil.scheduleObj.selectTicketDescription();">{{ ticket_description }}</textarea>
