--- a/app/html/schedule_session_modal.html
+++ b/app/html/schedule_session_modal.html
@@ -131,6 +131,8 @@
 
     <!-- Assist IFrame For Communication -->
     <iframe id="post_message_iframe" width="0%" height="0%" style="border:0px;"></iframe>
+
+    <iframe id="get_domain_iframe" width="0%" height="0%" style="border:0px;"></iframe>
   
   </body>
 </html>
