--- a/app/html/schedule_session_modal.html
+++ b/app/html/schedule_session_modal.html
@@ -124,6 +124,7 @@
     <script type="text/javascript" src="../js/schedule_session_modal.js"></script>
 
     <div class="schedule-session-container">
+        <div id="top_error_message"></div>
         <div id="content">
             <div class="preloader"></div>
         </div>
