--- a/app/html/ticket_sidebar.html
+++ b/app/html/ticket_sidebar.html
@@ -36,7 +36,7 @@
     <!-- app not installed page  -->
     <script id="app_not_installed_template" type="text/x-handlebars-template">
         <span class="primary-message">
-            You haven't completed your configuration. Please complete the configuration process and try again.
+            Freshdesk integration is not configured in Zoho Assist. Please complete the configuration process and try again.
         </span>
         <div class="btn-container">
             <input type="button" class="primary-btn" value="Configure" onclick="AssistUtil.assistObj.openInstallationPage()" />
